examples/002_nginx_ingress/ingress-rule.yaml
# Creates an Ingress resource that routes requests to the /hello path to the server-service.
# curl localhost:3000/hello
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localhost # So that we can reach it through localhost
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 80
